<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"

        >

        <ImageView
            android:id="@+id/ivRegLogo"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginBottom="55dp"
            android:layout_marginTop="18dp"
            android:contentDescription="TODO"
            android:scaleType="fitCenter"
            android:src="@drawable/game_logo" />
        <ImageView
            android:id="@+id/ivJoinUs"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="TODO"
            android:src="@drawable/joinus_text" />
        <AutoCompleteTextView
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_rect"
            android:drawableLeft="@drawable/icon_person"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/icon_person"
            android:hint="@string/hint_name"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />

        <AutoCompleteTextView
            android:id="@+id/UsernameReg"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_rect"
            android:drawableLeft="@drawable/icon_username"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/icon_username"
            android:hint="@string/usernameReg"
            android:paddingEnd="10dp"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />

        <AutoCompleteTextView
            android:id="@+id/EmailReg"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_rect"
            android:drawableLeft="@drawable/icon_mail"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/icon_mail"
            android:hint="@string/emailReg"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />

        <AutoCompleteTextView
            android:id="@+id/phNumber"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_rect"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_phone"
            android:hint="@string/hint_number"
            android:paddingEnd="10dp"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PasswordReg"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_rect"
            android:drawableLeft="@drawable/icon_password"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/icon_password"
            android:hint="@string/passwordReg"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:clickable="true"
            android:longClickable="true"
            android:textStyle="bold"
            android:textSize="15dp"
            android:background="@drawable/btnsignup_gradient"
            android:text="@string/sign_upReg"
            android:textColor="#FFFFFF"  />

        <TextView
            android:id="@+id/gtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:longClickable="true"
            android:text="@string/signin_redirect"
            android:textColor="@color/gray" />

    </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>