<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        >


        <ImageView
            android:id="@+id/ivLogLogo"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginBottom="55dp"
            android:scaleType="fitCenter"
            android:src="@drawable/game_logo" />


        <ImageView
            android:id="@+id/ivSignIn"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="Sign in text on registration activity"
            android:src="@drawable/sign_in" />


        <AutoCompleteTextView
            android:id="@+id/usernamelog"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_rect"
            android:drawableLeft="@drawable/icon_person"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/icon_person"
            android:hint="@string/usernameReg"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passlog"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_rect"
            android:drawableLeft="@drawable/icon_password"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/icon_password"
            android:hint="@string/passwordReg"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:text="@string/forgot_password"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btnsignin_gradient"
            android:text="@string/sign_inLog"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:clickable="true"
            android:longClickable="true"/>


        <TextView
            android:id="@+id/gtsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:longClickable="true"
            android:text="@string/signup_redirect"
            android:textColor="@color/gray" />


    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>